--- a/api/package.json
+++ b/api/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/HigorC/scales/issues"
   },
-  "homepage": "https://github.com/HigorC/scales#readme"
+  "homepage": "https://github.com/HigorC/scales#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "nodemon": "^2.0.4"
+  }
 }
