--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bulma-tooltip": "^3.0.2",
     "core-js": "^3.6.5",
     "tone": "^14.7.39",
     "vue": "^3.0.0-0"
