--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,8 @@
   "main": "init.js",
   "scripts": {
     "start": "nodemon init.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy": "git init;git add -A;git commit -m 'deploy';git push -f git@github.com:higorc/scales.git master:api"
   },
   "repository": {
     "type": "git",
