--- a/client/package.json
+++ b/client/package.json
@@ -6,11 +6,16 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "deploy": "bash ./deploy.sh"
+    "deploy:gh": "bash ./deploy.sh",
+    "deploy:heroku": "git init;git add -A;git commit -m 'deploy';git push -f git@github.com:higorc/scales.git master:client"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.1",
+    "bulma": "^0.9.1",
     "bulma-tooltip": "^3.0.2",
     "core-js": "^3.6.5",
+    "express": "^4.17.1",
+    "serve-static": "^1.14.1",
     "tone": "^14.7.39",
     "vue": "^3.0.0-0"
   },
